Adds location manager, and adjusts the around me map on viewDidAppear to move to their location. Also makes the indicators on the venue interior pages work

--- a/Wijnderlust/Info.plist
+++ b/Wijnderlust/Info.plist
@@ -50,5 +50,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to find the tastiest wine near you! </string>
 </dict>
 </plist>
